--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
       <!-- info -->
       <article class="gift-info">
         <h3><u>BMW CAR GIVEAWAY</u></h3>
-        <h4 class="giveaway">
-          giveaway ends on sunday, 8th of March 2023, 11:30am
-        </h4>
         <p>
           MY NAME IS JAEY,THE CEO OF JAEY DESIGN. WE DEAL IN DESIGNING ALL TYPES
           OF DESIGN WE BELIEVE THAT ALL THINGS ARE POSSIBLE, WELL THIS YEAR I 
@@ -30,8 +27,9 @@
 
           REMEMBER!!!!"if you snooze you loose"
         </p>
-            GIVEAWAY ENDS 15 APRIL 2024, 4:00pm
-          </h4>
+        <h4 class="giveaway">
+          GIVEAWAY ENDS 15TH OF APRIL 2024, 11:30am
+        </h4>
         <div class="deadline expired-message">
           <!-- days -->
           <div class="deadline-format">
@@ -62,6 +60,7 @@
             <div>
               <h4 class="seconds">34</h4>
               <span>secs</span>
+              
             </div>
           </div>
           <!-- end of days -->
